# easyApi2

./: README.md  app.py  config.py  pyproject.toml  schema.sql  vinyl_store.sql
demo/: __init__.py  api.py  config.py
demo/controllers/: __init__.py  account.py  auth.py  cart.py  catalog.py  orders.py  review.py
docs/: EXAMPLES.md
easyApi/: API_REFERENCE.md  CUSTOM_SCHEMA.md  __init__.py  app.py  config.py
easyApi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
easyApi/db/: __init__.py  connection.py  exceptions.py
easyApi/models/: __init__.py  cart_model.py  order_model.py  product_model.py  review_model.py  user_model.py
easyApi/services/: __init__.py  jwt_service.py  order_service.py  security.py
vinyl_store/: QUICKSTART.md  README.md  __init__.py  app.py  back.html  config.py  requirements.txt  schema.sql  setup_db.sql  stress_test
vinyl_store/controllers/: __init__.py  admin.py  auth.py  cart.py  catalog.py  orders.py  reviews.py  wishlist.py
vinyl_store/middleware/: __init__.py  auth.py  errors.py  logging.py  responses.py
vinyl_store/repositories/: __init__.py  base.py  cart.py  catalog.py  orders.py  reviews.py  users.py  wishlist.py
vinyl_store/routes/: __init__.py
vinyl_store/services/: __init__.py  admin_service.py  auth_service.py  cart_service.py  catalog_service.py  order_service.py  review_service.py  wishlist_service.py
vinyl_store/static/css/: style.css
vinyl_store/static/js/: app.js
vinyl_store/templates/: index.html
vinyl_store/validators/: __init__.py  auth.py  common.py  store.py
