[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easyApi"
version = "0.1.0"
description = "Библиотека для ускорения разработки RESTful API на Flask и PyMySQL"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask>=3.0.0",
    "PyMySQL>=1.1.0",
    "PyJWT>=2.8.0",
    "Werkzeug>=3.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["easyApi*"]

